# uvwmaterial

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md
docs/: Doxyfile.in  Makefile  index.rst  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: changelog.rst  getting_started.rst  install.rst  material_base.rst  materials.rst
example/nonlinear/damage/build-strain_based_isotropic_damage_mean_field_composite-Desktop_Qt_6_1_2_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
examples/: CMakeLists.txt
examples/composite/linear/mean_field/dilute_kernal/: CMakeLists.txt  main.cpp
examples/composite/linear/mean_field/mori_tanaka_kernal/: CMakeLists.txt  main.cpp
examples/composite/linear/mean_field/scs_kernal/: CMakeLists.txt  main.cpp
examples/composite/linear/mean_field/short_fibres/: CMakeLists.txt  main.cpp
examples/composite/linear/rule_of_mixture/reuss_kernal/: CMakeLists.txt  main.cpp
examples/composite/linear/rule_of_mixture/voigt_kernal/: CMakeLists.txt  main.cpp
examples/composite/linear/rule_of_mixture/vrh_kernal/: CMakeLists.txt  main.cpp
examples/linear/build-json_linear_elasticity-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
examples/linear/build-json_linear_elasticity-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-20e17eb907942e9c1f66.json  cmakeFiles-v1-6df61a7ae23b914b4750.json  codemodel-v2-a1dbbb945660528b129a.json  index-2022-09-23T22-06-00-0092.json  target-json_linear_elasticity-Debug-64ddb2516c5ae040097a.json
examples/linear/build-json_linear_elasticity-Desktop-Debug/.qtc_clangd/: compile_commands.json
examples/linear/json_linear_elasticity/: CMakeLists.txt  main.cpp
examples/linear/linear_elasticity/: CMakeLists.txt  main.cpp
examples/nonlinear/damage/build-strain_based_isotropic_damage-Desktop_Qt_6_1_2_GCC_64bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
examples/nonlinear/damage/build-strain_based_isotropic_damage_mean_field_composite-Desktop_Qt_6_1_2_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
examples/nonlinear/damage/build-strain_based_isotropic_damage_rule_of_mixture-Desktop_Qt_6_1_2_GCC_64bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
examples/nonlinear/damage/strain_based_isotropic_damage/: CMakeLists.txt  main.cpp
examples/nonlinear/damage/strain_based_isotropic_damage_mean_field_composite/: CMakeLists.txt  main.cpp
examples/nonlinear/damage/strain_based_isotropic_damage_rule_of_mixture/: CMakeLists.txt  main.cpp
include/: composite_material_base_bones.h  composite_material_conductivity_base_bones.h  composite_material_conductivity_base_meat.h  composite_material_history_base_bones.h  composite_material_inclusion_base_bones.h  composite_material_inclusion_base_meat.h  composite_material_nonlinear_base_bones.h  composite_material_rule_of_mixture_base_meat.h  composite_material_rule_of_mixture_kernal_base_meat.h  composite_material_short_fibre_material_base_bones.h  eigenstrain_curing_material_base_bones.h  eigenstrain_material_base_bones.h  eigenstrain_material_base_meat.h  eigenstrain_temperature_material_base_bones.h  eigenstrain_temperature_material_base_meat.h  electro_magnetic_material_base_bones.h  electro_magnetic_material_base_meat.h  element_deletion_bones.h  eshelby_tensor_base_meat.h  eshelby_tensor_conductivity_base_meat.h  eshelby_tensor_finite_strain_base_bones.h  eshelby_tensor_finite_strain_base_meat.h  eshelby_tensor_functions.h  eshelby_tensor_general_meat.h  eshelby_tensor_nonlinear_base_bones.h  eshelby_tensor_solid_anisotropic_meat.h  eshelby_tensor_solid_base_bones.h  eshelby_tensor_solid_cylinder_meat.h  eshelby_tensor_solid_cylinder_x1_meat.h  eshelby_tensor_solid_cylinder_x2_bones.h  eshelby_tensor_solid_cylinder_x2_meat.h  eshelby_tensor_solid_cylindrical_ellipsoid_bones.h  eshelby_tensor_solid_general_geometry_bones.h  eshelby_tensor_solid_general_geometry_finite_strain_meat.h  eshelby_tensor_solid_general_geometry_meat.h  eshelby_tensor_solid_sphere_nonlinear_small_strain_bones.h  finite_strain_mean_field_composite_meat.h  finite_strain_solid_material_base_meat.h  gamm2022_meat.h  general_material_bones.h  (+72 more)
include/uvwmaterial/: composite_material_base_bones.h  composite_material_base_meat.h  composite_material_conductivity_base_bones.h  composite_material_conductivity_base_meat.h  composite_material_eigenstrain_base_bones.h  composite_material_eigenstrain_base_meat.h  composite_material_history_base_bones.h  composite_material_history_base_meat.h  composite_material_inclusion_base_bones.h  composite_material_inclusion_base_meat.h  composite_material_nonlinear_base_bones.h  composite_material_nonlinear_base_meat.h  composite_material_rule_of_mixture_base_bones.h  composite_material_rule_of_mixture_base_meat.h  composite_material_rule_of_mixture_kernal_base_bones.h  composite_material_rule_of_mixture_kernal_base_meat.h  composite_material_short_fibre_material_base_bones.h  composite_material_short_fibre_material_base_meat.h  composite_material_solid_base_bones.h  composite_material_solid_base_meat.h  conductivity_material_base_bones.h  conductivity_material_base_meat.h  degree_of_cure_dependent_material_bones.h  degree_of_cure_dependent_material_meat.h  eigenstrain_curing_material_base_bones.h  eigenstrain_curing_material_base_meat.h  eigenstrain_material_base_bones.h  eigenstrain_material_base_meat.h  eigenstrain_temperature_material_base_bones.h  eigenstrain_temperature_material_base_meat.h  electro_magnetic_material_base_bones.h  electro_magnetic_material_base_meat.h  element_deletion_bones.h  element_deletion_meat.h  eshelby_tensor_base_bones.h  eshelby_tensor_base_meat.h  eshelby_tensor_conductivity_base_bones.h  eshelby_tensor_conductivity_base_meat.h  eshelby_tensor_conductivity_sphere_bones.h  eshelby_tensor_conductivity_sphere_meat.h  (+169 more)
scripts/: script.py  write_materials_examples.py
src/: uvwmat.cpp
tests/: CMakeLists.txt  main.cpp
(+471 files in other folders)
